; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_data_clear.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_obs_data_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.obs_data_item* }
%struct.obs_data_item = type { %struct.obs_data_item* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @obs_data_clear(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca %struct.obs_data_item*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = icmp ne %struct.TYPE_3__* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %1
  br label %20

7:                                                ; preds = %1
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.obs_data_item*, %struct.obs_data_item** %9, align 8
  store %struct.obs_data_item* %10, %struct.obs_data_item** %3, align 8
  br label %11

11:                                               ; preds = %14, %7
  %12 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %13 = icmp ne %struct.obs_data_item* %12, null
  br i1 %13, label %14, label %20

14:                                               ; preds = %11
  %15 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %16 = call i32 @clear_item(%struct.obs_data_item* %15)
  %17 = load %struct.obs_data_item*, %struct.obs_data_item** %3, align 8
  %18 = getelementptr inbounds %struct.obs_data_item, %struct.obs_data_item* %17, i32 0, i32 0
  %19 = load %struct.obs_data_item*, %struct.obs_data_item** %18, align 8
  store %struct.obs_data_item* %19, %struct.obs_data_item** %3, align 8
  br label %11

20:                                               ; preds = %6, %11
  ret void
}

declare dso_local i32 @clear_item(%struct.obs_data_item*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
